--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -61,6 +61,40 @@
     resize: vertical;
   }
 
+  &__checkbox-label {
+    display: flex;
+    align-items: flex-start;
+    gap: map-get($spacings, 2);
+    cursor: pointer;
+    font-size: 0.875rem;
+    color: var(--text-primary);
+    line-height: 1.5;
+  }
+
+  &__checkbox {
+    margin-top: 0.25rem;
+    width: 18px;
+    height: 18px;
+    min-width: 18px;
+    cursor: pointer;
+    accent-color: var(--color-primary);
+    @include transition(all);
+
+    &:focus {
+      outline: 2px solid var(--color-primary);
+      outline-offset: 2px;
+    }
+
+    &:invalid {
+      outline: 2px solid #dc3545;
+    }
+  }
+
+  &__checkbox-text {
+    flex: 1;
+    user-select: none;
+  }
+
   &__submit {
     @include button-base;
     width: 100%;
