выровнена страница отзывов

--- a/src/pages/TestimonialForm/TestimonialForm.scss
+++ b/src/pages/TestimonialForm/TestimonialForm.scss
@@ -31,7 +31,7 @@ body {
   &__controls {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     gap: map-get($spacings, 2);
     margin-bottom: map-get($spacings, 5);
@@ -214,7 +214,7 @@ body {
 
   &__input,
   &__textarea {
-    width: 100%;
+    // width: 100%;
     max-width: 100%;
     padding: map-get($spacings, 3) map-get($spacings, 4);
     background-color: var(--bg-surface);
