--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -804,10 +804,17 @@
     border-radius: 8px;
     padding: map-get($spacings, 3);
     @include box-shadow(1);
+    margin-bottom: map-get($spacings, 4);
 
     @include respond-to(sm) {
       padding: map-get($spacings, 4);
     }
+  }
+
+  &__photo-subsection {
+    margin-top: map-get($spacings, 4);
+    padding-top: map-get($spacings, 4);
+    border-top: 1px solid var(--border-color);
   }
 
   &__logo-option {
