--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,17 +1,14 @@
 .hero {
   position: relative;
   min-height: 100vh;
-  @include flex-center;
-  padding: 0 0 map-get($spacings, 6);
-  text-align: center;
+  padding: 0;
   margin-top: 0;
 
   &__content {
-    max-width: 700px;
-    width: 100%;
-    margin: 0 auto;
-    padding: map-get($spacings, 6) map-get($spacings, 2) 0;
     position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: map-get($spacings, 6) map-get($spacings, 2) 0;
   }
 
   &__name {
@@ -22,9 +19,15 @@
     color: var(--text-secondary);
     opacity: 0;
     animation: fadeIn 0.6s ease 0.2s forwards;
+    text-align: center;
 
     @include respond-to(md) {
       font-size: 1.25rem;
+    }
+
+    @media (min-width: 426px) {
+      text-align: left;
+      padding-left: map-get($spacings, 4);
     }
   }
 
@@ -36,6 +39,7 @@
     color: var(--text-primary);
     opacity: 0;
     animation: fadeIn 0.6s ease 0.4s forwards;
+    text-align: center;
 
     @include respond-to(md) {
       font-size: 2.5rem;
@@ -44,13 +48,35 @@
     @include respond-to(lg) {
       font-size: 3rem;
     }
+
+    @media (min-width: 426px) {
+      text-align: left;
+      padding-left: map-get($spacings, 4);
+    }
   }
 
   &__actions {
-    display: flex;
-    justify-content: center;
+    position: absolute;
     opacity: 0;
     animation: fadeIn 0.6s ease 0.6s forwards;
+
+    // На мобильных (≤425px) - по центру, на 3/4 высоты
+    @media (max-width: 425px) {
+      left: 50%;
+      transform: translateX(-50%);
+      top: 75%;
+      width: calc(100% - #{map-get($spacings, 4)});
+      display: flex;
+      justify-content: center;
+    }
+
+    // На больших экранах (>425px) - справа с отступом
+    @media (min-width: 426px) {
+      right: map-get($spacings, 4);
+      bottom: map-get($spacings, 6);
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 
   &__cta {
